<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="movies">Movies</string>
    <string name="tvshows">Tv Shows</string>
    <string name="movie_title">Avengers Infinity War</string>
    <string name="tvShow_title">The Flash</string>
    <string name="movie_release_date">movie release date</string>
    <string name="tv_show_release_date">TV Show release date</string>
    <string name="runtime_text">%s Minutes</string>
    <string name="episodeSeason_text">%s Episodes | %s Season(s)</string>
    <string name="detail_title">Avengers Infinity War</string>
    <string name="detail_desc">detail desc</string>
    <string name="detail_release_date">detail release date</string>
    <string name="detail_genre">detail genre</string>
    <string name="detail_score">detail score</string>
    <string name="image_poster_film">image poster film</string>
    <string name="tv_splash_screen">MovieCatalogue</string>
    <string name="logo_app">Logo</string>
    <string name="iv_rating">rating</string>
    <string name="header_text">Discover trending films here</string>
    <string name="tv_show_rating">90%</string>
    <string name="bn_movie">Movies</string>
    <string name="bn_favorite">Favorite</string>
    <string name="bn_tv_show">TV Shows</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_movie_title">Explore trending Movies</string>
    <string name="fragment_tvShow_title">Explore trending Tv Shows</string>
    <string name="fragment_favorite_title">Your Favorite Films</string>
    <string name="cd_favorite">favorite film</string>
    <string name="confirm_undo">Yes!</string>
    <string name="undo">Undo action?</string>
    <string name="menu_new_release">Newest Release</string>
    <string name="menu_oldest_release">Oldest Release</string>
    <string name="menu_best_vote">Best Vote</string>
    <string name="menu_worst_vote">Worst Vote</string>

</resources>