<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_menu" android:checkableBehavior="single">
        <item
            android:id="@+id/action_newest_release"
            android:checked="true"
            android:title="@string/menu_new_release" />
        <item
            android:id="@+id/action_oldest_release"
            android:checked="false"
            android:title="@string/menu_oldest_release" />
        <item
            android:id="@+id/action_best_vote"
            android:checked="false"
            android:title="@string/menu_best_vote"/>
        <item
            android:id="@+id/action_worst_vote"
            android:checked="false"
            android:title="@string/menu_worst_vote" />
    </group>
</menu>